; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_remove_last_line.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_remove_last_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image = type { i64, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.image*)* @remove_last_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_last_line(%struct.image* %0) #0 {
  %2 = alloca %struct.image*, align 8
  store %struct.image* %0, %struct.image** %2, align 8
  %3 = load %struct.image*, %struct.image** %2, align 8
  %4 = getelementptr inbounds %struct.image, %struct.image* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = load %struct.image*, %struct.image** %2, align 8
  %7 = getelementptr inbounds %struct.image, %struct.image* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = add i64 %8, -1
  store i64 %9, i64* %7, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i64 %9
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.image*, %struct.image** %2, align 8
  %14 = getelementptr inbounds %struct.image, %struct.image* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = sext i32 %15 to i64
  %17 = sub nsw i64 %16, %12
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %14, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
